templates/ingress.yaml
# mychart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mifugo-data-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mifugo-data.ai
    http:
      paths:
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: mifugo-data-frontend-svc
            port:
              number: 3000
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: mifugo-data-backend-svc
            port:
              number: 5000
